# BQ76920_Bridge

./: .cppcheck-suppressions  .dockerignore  .gitignore  .mxproject  BQ76920_Bridge.ioc  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  STM32F405XX_FLASH.ld  openocd.cfg
.github/: pull_request_template.md
.github/actions/setup-toolchain/: action.yml
.github/workflows/: build.yml
Core/Inc/: bq76920.h  firmware_version.h  i2c.h  main.h  stm32f4xx_hal_conf.h  usb_hid_bridge.h
Core/Src/: bq76920.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  usb_hid_bridge.c
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
USB_DEVICE/App/: usbd_desc.c  usbd_desc.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: STM32_EV2300_WORKFLOW.md
tests/: CMakeLists.txt
tests/integration/: test_bench_no_cells.py  test_usb_hid_bridge.py
tests/mocks/: mock_hal_i2c.c  mock_hal_i2c.h  stm32f4xx_hal.h
tests/tools/: IMPORTANT THING TO FIX.txt  compare_ev2300_descriptors.py  compare_results.json  comprehensive_diff.json  comprehensive_diff.py  diff_ev2300_responses.py  diff_results.json  full_sweep.py  full_sweep_results.json  read_cmd_log.py  read_format_diff.py  real_ev2300_clean_capture.json  real_ev2300_full_capture.json  sniff_ev2300_init.py  sniff_results.json  test_ev2300_compliance.py  trace_dll.py  verify_packet_format.py  write_diff.py  write_diff_results.md
tests/unit/: test_bq76920_crc8.c  test_bq76920_protocol.c  test_bq76920_voltage.c
